k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE ANNOTATION
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
      - awesom0-com
      - www.awesom0.com
      secretName: awesom0-com
  rules:
    - host: awesom0.com
      http:
        paths:
        - pathType: Prefix
          path: /?(.*)
          backend:
            service:
              name: client-srv
              port: 
                number: 3000
        - pathType: Prefix
          path: /api/?(.*)
          backend:
            service:
              name: server-srv
              port: 
                number: 5000

    - host: www.awesom0.com
      http:
        paths:
        - pathType: Prefix
          path: /?(.*)
          backend:
            service:
              name: client-srv
              port: 
                number: 3000
        - pathType: Prefix
          path: /api/?(.*)
          backend:
            service:
              name: server-srv
              port: 
                number: 5000
